2003-03-20  Kazu Hirata  <kazu at cs dot umass dot edu>

	* fold-const.c (fold): Fold A - (A & B) into ~B & A.

2003-03-20  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (a peephole2): New.

2003-03-20  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (*addsi3_and_r_1): New.
	(*addsi3_and_not_r_1): Likewise.

2003-03-19  Loren James Rittle  <ljrittle@acm.org>

	* Makefile.in (STRICT2_WARN): Add @WERROR@.
	(GCC_WARN_CFLAGS): Remove $(WERROR).
	(fixinc.sh-warn): New.
	* ada/Make-lang.in (ada-warn): Add $(WERROR).
	* cp/Make-lang.in (cp-warn): Add $(WERROR).
	* f/Make-lang.in (f-warn): Add $(WERROR).
	* java/Make-lang.in (java-warn): Add $(WERROR).
	* treelang/Make-lang.in (treelang-warn): Add $(WERROR).

2003-03-19  Nathanael Nerode  <neroden@gcc.gnu.org>

	* c-common.h (c_dump_tree), c-dump.c (c_dump_tree),
	langhooks-def.h (lhd_tree_dump_dump_tree),
	langhooks.c (lhd_tree_dump_dump_tree), langhooks.h (*dump_tree):
	Change return type from 'int' to 'bool'.  Replace 0 and 1 with
	true and false in return statements.

2003-03-19  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2out.c (DWARF_INITIAL_LENGTH_SIZE): Define.
	(DWARF_COMPILE_UNIT_HEADER_SIZE): Take into account
	DWARF_INITIAL_LENGTH_SIZE.
	(output_compilation_unit_header, output_pubnames, output_aranges)
	(output_line_info): Output 0xffffffff escape value for 64-bit
	DWARF extension.
	* config/mips/iris6.h (DWARF_INITIAL_LENGTH_SIZE): Define.

2003-03-19  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_preferred_reload_class): Do not
	force constants to the pool unless necessary.
	(s390_decompose_address): Prefer to use pointer as base,
	not index register.
	* config/s390/s390.md ("*tsthiCCT_only"): Remove '?' from
	Q alternative.
	("*movdi_64", "*movsi", "movhi", "movqi_64", "movqi", 
	"*movdf_64", "*movsf"): Add '?' to Q->Q alternatives.
	("*extractqi", "*extracthi", "*zero_extendhisi2_31",
	"*zero_extendqisi2_31", "*zero_extendqihi2_31",